# TMR-2025

./: .bash_history  README.md  bcd.v  bcdc.v  iris_runway.sdf  myWorld.world
DroneOpsROS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
DroneOpsROS/install/control_system/lib/control_system/: control_aruco  control_takeoff.py  nodo_control
DroneOpsROS/install/control_system/share/control_system/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
DroneOpsROS/install/mission_control/lib/mission_control/: arm_drone  mission_manager  mission_manager.py  takeoff
DroneOpsROS/install/mission_control/share/mission_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
DroneOpsROS/install/vision_system/lib/vision_system/: aruco_detector  camera_node
DroneOpsROS/install/vision_system/share/vision_system/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
DroneOpsROS/log/: latest_build
DroneOpsROS/src/control_system/: CMakeLists.txt  package.xml  setup.cfg  setup.py
DroneOpsROS/src/control_system/control_system/: control_aruco.py  control_land.py  control_takeoff.py  nodo_control.py
DroneOpsROS/src/control_system/launch/: mavros_launch.py
DroneOpsROS/src/mission_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
DroneOpsROS/src/mission_control/launch/: full_mission_launch.py  mavros_launch.py
DroneOpsROS/src/mission_control/launch/install/: setup.bash
DroneOpsROS/src/mission_control/launch/log/: latest_build
DroneOpsROS/src/mission_control/mission_control/: mission_manager.py  takeoff.py
DroneOpsROS/src/mission_control/mission_control/states/: takeoff.py
DroneOpsROS/src/mission_control/srv/: Altitud.srv
DroneOpsROS/src/vision_system/: setup.cfg  setup.py
DroneOpsROS/src/vision_system/vision_system/: aruco_detector.py  cameraDistorsion_webcam.txt  camera_node.py
DroneOpsROS/src/vision_system/vision_system/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
DroneOpsROS/src/vision_system/vision_system/log/: latest_build
aruco_marker/: model.config  model.sdf
aruco_marker/materials/scripts/: aruco_marker.material
dev_scripts/: color_detector.py  line_detector.py
drone_ws/install/: local_setup.sh  setup.sh
drone_ws/install/aruco_drone_control/lib/aruco_drone_control/: pid_controller
drone_ws/install/aruco_drone_control/share/aruco_drone_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
drone_ws/install/high_level_mission/share/high_level_mission/: package.bash  package.zsh
drone_ws/install/mission_control/lib/mission_control/: mission_manager
drone_ws/install/mission_control/share/mission_control/: package.dsv  package.sh  package.xml  package.zsh
drone_ws/install/my_aruco_detector/lib/my_aruco_detector/: aruco_detector
drone_ws/install/my_aruco_detector/share/my_aruco_detector/: package.bash  package.dsv  (+3 more)
drone_ws/log/: latest_build
drone_ws/src/aruco_drone_control/: setup.cfg  setup.py
drone_ws/src/aruco_drone_control/launch/: mavros.launch.py
drone_ws/src/high_level_mission/: package.xml  setup.cfg  setup.py
drone_ws/src/mission_control/: package.xml  setup.py
drone_ws/src/mission_control/mission_control/: mission_manager.py
drone_ws/src/my_aruco_detector/: package.xml  setup.cfg  setup.py
drone_ws/src/my_aruco_detector/my_aruco_detector/: aruco_detector.py  cameraMatrix_webcam.txt
drone_ws/src/my_image_processor/: package.xml  setup.cfg  setup.py
drone_ws/src/my_image_processor/my_image_processor/: image_viewer.py
(+75 files in other folders)
